# rust-xmlrpc

./: Cargo.toml  Makefile  README.md
examples/: ros_client_example.rs  simple.rs
src/: client.rs  encoding.rs  lib.rs  protocol.rs
