[package]
name = "rust-xmlrpc"
version = "0.0.3"
description = "Minimal Rust XML-RPC library"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/gch/rust-xmlrpc"
authors = ["Galen Clark Haynes <gch@users.noreply.github.com>"]

[lib]
name = "xmlrpc"
path = "src/lib.rs"

[dependencies]
rustc-serialize = "0.2.7"
# hyper = 0.0.17 # FIXME

[dependencies.xml-rs]
git = "https://github.com/netvl/xml-rs.git"

[[example]]
name = "simple"
path = "examples/simple.rs"

